AX: title attribute is not exposed as the AXDescription on AXImage when there is no other fallback content https://bugs.webkit.org/show_bug.cgi?id=96412

Reviewed by Jon Honeycutt.

Source/WebCore:

Ensure that if an image has a title attribute, but no alt attribute, it will fallback to use the title attribute
for the descriptive text.

Test: accessibility/img-fallsback-to-title.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::accessibilityDescription):

LayoutTests:

* accessibility/img-fallsback-to-title.html: Added.
* platform/mac/accessibility/img-fallsback-to-title-expected.txt: Added.



Canonical link: https://commits.webkit.org/114319@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128227 268f45cc-cd09-0410-ab3c-d52691b4dbfc