Source/WebCore/accessibility/AccessibilityRenderObject.cpp
@@ -1498,17 +1498,17 @@ String AccessibilityRenderObject::accessibilityDescription() const
     if (!ariaDescription.isEmpty())
         return ariaDescription;
     
-    Node* node = m_renderer->node();
     if (isImage() || isInputImage() || isNativeImage() || isCanvas()) {
-        if (node && node->isHTMLElement()) {
-            const AtomicString& alt = toHTMLElement(node)->getAttribute(altAttr);
-            if (alt.isEmpty())
-                return String();
+
+        // Images should use alt as long as the attribute is present, even if empty.
+        // Otherwise, it should fallback to other methods, like the title attribute.
+        const AtomicString& alt = getAttribute(altAttr);
+        if (!alt.isNull())
             return alt;
-        }
     }
     
 #if ENABLE(MATHML)
+    Node* node = m_renderer->node();
     if (node && node->isElementNode() && static_cast<Element*>(node)->isMathMLElement())
         return getAttribute(MathMLNames::alttextAttr);
 #endif
